--- a/index.html
+++ b/index.html
@@ -17,99 +17,28 @@
                 </div>
                 <div class="title-playing">
                     <span>NOW PLAYING</span>
-                    <h1>That Girl</h1>
+                    <h2 id="title-song"></h2>
                 </div>
                 <div class="search-container">
                     <button id="btn-search"><i class="fa-solid fa-magnifying-glass"></i></button>
                 </div>
             </div>
             <div class="cd">
-                <img src="./assets/imgs/Olly Murs - That Girl.jpg" alt="">
+                <img id="cd-thumb" src="" alt="">
             </div>
             <div class="controls">
             <button class="btn-control"><i class="fas fa-redo"></i></button>
             <button class="btn-control"><i class="fas fa-step-backward"></i></button>
-            <button class="btn-control" id="play-btn"><i class="fas fa-play"></i></button>
+            <button class="btn-control" id="btn-play-pause"><i id="icon-play-pause" class="fas fa-play"></i></button>
             <button class="btn-control"><i class="fas fa-step-forward"></i></button>
             <button class="btn-control"><i class="fas fa-random"></i></button>
             </div>
             <div class="audio-section">
+                <input id="range" type="range" min="1" max="100">
                 <audio id="audio" src="./assets/audios/Fall Out Boy - Centuries (Lyrics).mp3"></audio>
             </div>
         </div>
         <div class="playlist">
-            <div class="song">
-                <div class="thumb">
-                    <img src="./assets/imgs/Fall Out Boy - Centuries.jpg" alt="">
-                </div>
-                <div class="body-song">
-                    <p class="name">Fall Out Boy</p>
-                    <p class="singer">Centuries</p>
-                </div>
-                <div class="option">
-                    <i class="fa-solid fa-heart" style="color: #ff427b;"></i>
-                </div>
-            </div>
-            <div class="song">
-                <div class="thumb">
-                    <img src="./assets/imgs/Olly Murs - That Girl.jpg" alt="">
-                </div>
-                <div class="body-song">
-                    <p class="name">That Girl</p>
-                    <p class="singer">Olly Murs</p>
-                </div>
-                <div class="option">
-                    <i class="fa-solid fa-heart" style="color: #ff427b;"></i>
-                </div>
-            </div>
-            <div class="song">
-                <div class="thumb">
-                    <img src="./assets/imgs/Olly Murs - That Girl.jpg" alt="">
-                </div>
-                <div class="body-song">
-                    <p class="name">That Girl</p>
-                    <p class="singer">Olly Murs</p>
-                </div>
-                <div class="option">
-                    <i class="fa-solid fa-heart" style="color: #ff427b;"></i>
-                </div>
-            </div>
-            <div class="song">
-                <div class="thumb">
-                    <img src="./assets/imgs/Olly Murs - That Girl.jpg" alt="">
-                </div>
-                <div class="body-song">
-                    <p class="name">That Girl</p>
-                    <p class="singer">Olly Murs</p>
-                </div>
-                <div class="option">
-                    <i class="fa-solid fa-heart" style="color: #ff427b;"></i>
-                </div>
-            </div>
-            <div class="song">
-                <div class="thumb">
-                    <img src="./assets/imgs/Olly Murs - That Girl.jpg" alt="">
-                </div>
-                <div class="body-song">
-                    <p class="name">That Girl</p>
-                    <p class="singer">Olly Murs</p>
-                </div>
-                <div class="option">
-                    <i class="fa-solid fa-heart" style="color: #ff427b;"></i>
-                </div>
-            </div>
-            <div class="song">
-                <div class="thumb">
-                    <img src="./assets/imgs/Olly Murs - That Girl.jpg" alt="">
-                </div>
-                <div class="body-song">
-                    <p class="name">That Girl</p>
-                    <p class="singer">Olly Murs</p>
-                </div>
-                <div class="option">
-                    <i class="fa-solid fa-heart" style="color: #ff427b;"></i>
-                </div>
-            </div>
         </div>
     </div>
     <script src="./main.js"></script>
