--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
             <div class="controls">
             <button class="btn-control"><i class="fas fa-redo"></i></button>
             <button class="btn-control"><i class="fas fa-step-backward"></i></button>
-            <button class="btn-control" id="btn-play-pause"><i id="icon-play-pause" class="fas fa-play"></i></button>
-            <button class="btn-control"><i class="fas fa-step-forward"></i></button>
-            <button class="btn-control"><i class="fas fa-random"></i></button>
+            <button class="btn-control" id="btn-handlePlay"><i class="fa-solid fa-play"></i></button>
+            <button class="btn-control" id="next-song"><i class="fas fa-step-forward"></i></button>
+            <button class="btn-control" ><i class="fas fa-random"></i></button>
             </div>
             <div class="audio-section">
                 <input id="range" type="range" min="1" max="100">
-                <audio id="audio" src="./assets/audios/Fall Out Boy - Centuries (Lyrics).mp3"></audio>
+                <audio id="audio"></audio>
             </div>
         </div>
         <div class="playlist">
