prev and next song is done

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <div class="controls">
             <button class="btn-control"><i class="fas fa-redo"></i></button>
-            <button class="btn-control"><i class="fas fa-step-backward"></i></button>
+            <button class="btn-control" id="prev-song"><i class="fas fa-step-backward"></i></button>
             <button class="btn-control" id="btn-handlePlay"><i class="fa-solid fa-play"></i></button>
             <button class="btn-control" id="next-song"><i class="fas fa-step-forward"></i></button>
             <button class="btn-control" ><i class="fas fa-random"></i></button>
